tests/gabc-dump/should-fail/elision-initial.gabc
name: elision-initial;
%%
(c3) <e>Elision</e>(g)
